# nixFromStack

./: .gitignore  ChangeLog.md  Main.hs  README.md  default.nix  nixFromStack.cabal  nixFromStack.nix  result  stack-build.nix  stackage-packages.nix
